# Notus

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  Kconfig  README.md  codechecker_skip  prj.conf  tidy_analyzer.cfg  west.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: on-branch-delete.yml  on-push.yml
applications/coffee_scale/: CMakeLists.txt  README.md
applications/coffee_scale/docs/: COMET-RTE.md  error-handling.md  why.md
applications/coffee_scale/src/: display.cpp  main.cpp
applications/coffee_scale/tests/display/: CMakeLists.txt  testcase.yaml
cmake/: Sys.cmake  Util.cmake
demos/ActiveObject/: CMakeLists.txt
demos/ActiveObject/includes/: ActiveObject.hpp  module1.hpp
demos/ActiveObject/src/: main.cpp  module1.cpp
demos/ActiveObject2/: CMakeLists.txt  Kconfig
demos/ActiveObject2/src/: main.cpp
demos/ZBusWrapperWithReply/: CMakeLists.txt  Kconfig
demos/ZBusWrapperWithReply/includes/: pub_sub_with_msgq.hpp
demos/ZBusWrapperWithReply/src/: module1.cpp  module2.cpp
demos/backtracing/: CMakeLists.txt
demos/backtracing/src/: main.cpp
demos/error_code/src/: flights.cpp  flights2.cpp  flights2.hpp  queries.cpp  queries.hpp  submodule_error.hpp
demos/fmt/: CMakeLists.txt  README.md
demos/fmt/src/: main.cpp
demos/test/: prj.conf
demos/zbus_observers/: Kconfig  prj.conf
demos/zbus_observers/includes/: messages.hpp
demos/zbus_observers/src/listener/: listener.cpp
docs/: COMET-RTE.md  button.md  design.md  glossary.md  why.md
include/: button.hpp  errors.hpp  etl_profile.h  file_system.hpp  load_cell.hpp  stopwatch.hpp  testing.hpp
includes/: button.hpp  display.hpp  errors.hpp  load_cell.hpp  logging.hpp  stopwatch.hpp  testing.hpp  uptime_tp.hpp
samples/ActiveObject/: CMakeLists.txt
samples/ActiveObject/includes/: module1.hpp
samples/ActiveObject2/: CMakeLists.txt  README.md  prj.conf
samples/ActiveObject2/includes/: ActiveObject.hpp  module1.hpp
samples/ActiveObject2/src/: module1.cpp
samples/ActiveObjectCoro/: CMakeLists.txt
samples/ActiveObjectCoro/src/: active_object.hpp  ao1.cpp  ao1.hpp  main.cpp  scheduler.hpp  task.hpp
samples/Coroutines/: CMakeLists.txt
samples/Coroutines/src/: main.cpp  scheduler.hpp  task.hpp
samples/ZBusWrapperWithReply/: CMakeLists.txt  prj.conf
samples/ZBusWrapperWithReply/includes/: messages.hpp
samples/ZBusWrapperWithReply/src/: main.cpp
samples/backtracing/: CMakeLists.txt  prj.conf
samples/coroutines/: CMakeLists.txt  prj.conf
samples/coroutines/src/: main.cpp  scheduler.hpp  task.cpp  task.hpp
samples/error_code/: CMakeLists.txt  README.md
samples/error_code/src/: flights.hpp  main.cpp  seats.cpp  seats.hpp
samples/test/: CMakeLists.txt
samples/test/boards/: native_sim.overlay
samples/test/src/: main.cpp
samples/type_state/: CMakeLists.txt  README.md
samples/type_state/src/: gpio.cpp  gpio.hpp  main.cpp
samples/zbus_observers/: CMakeLists.txt  README.md
samples/zbus_observers/src/: main.cpp
samples/zbus_observers/src/listener/: CMakeLists.txt
samples/zbus_observers/src/msg_sub/: CMakeLists.txt  msg_sub.cpp
samples/zbus_observers/src/sub/: CMakeLists.txt  sub.cpp
scripts/: find_cmakelist.py  find_root.py  install.sh  list_image_tags.sh  prepare_cc_for_clang_tidy.py  remove_fno-freestanding.py
scripts/tests/: t_find_cmakelists.py
snippets/standard/: snippet.yml  standard.conf
snippets/testing/: snippet.yml  testing.conf
src/: button.cpp  button_error.cpp  display.cpp  load_cell.cpp  load_cell_error.cpp  main.cpp  stopwatch.cpp
subsys/: CMakeLists.txt  Kconfig
subsys/button/: CMakeLists.txt  Kconfig  button.cpp  button_error.cpp
subsys/file_system/: CMakeLists.txt  Kconfig  file_system.cpp  file_system_error.cpp
subsys/load_cell/: CMakeLists.txt  Kconfig
subsys/stopwatch/: CMakeLists.txt  Kconfig
tests/: t_find_cmakelists.py  t_find_root.py
tests/button/: CMakeLists.txt  prj.conf  testcase.yaml
tests/button/boards/: native_sim.overlay
tests/button/dts/bindings/: test-button.yaml
tests/button/src/: main.cpp
tests/cpu_wait/: testcase.yaml
tests/display/: CMakeLists.txt
tests/display/src/: main.cpp
tests/file_system/: CMakeLists.txt  prj.conf  testcase.yaml
tests/file_system/boards/: native_sim.overlay
tests/file_system/src/: main.cpp
tests/load_cell/: CMakeLists.txt  prj.conf  testcase.yaml
tests/load_cell/boards/: native_sim.overlay
tests/load_cell/src/: main.cpp
tests/stopwatch/: CMakeLists.txt  prj.conf  testcase.yaml
tests/stopwatch/src/: main.cpp
